--- a/app/src/main/res/layout/activity_upload_xml.xml
+++ b/app/src/main/res/layout/activity_upload_xml.xml
@@ -7,5 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.xml.upload.UploadXmlActivity">
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:tint="@color/white"
+        app:backgroundTint="@color/yellow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_camera" />
 </androidx.constraintlayout.widget.ConstraintLayout>
