--- a/app/src/main/res/layout/activity_upload_xml.xml
+++ b/app/src/main/res/layout/activity_upload_xml.xml
@@ -7,6 +7,42 @@
     android:layout_height="match_parent"
     tools:context=".ui.xml.upload.UploadXmlActivity">
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvImage"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="12dp"
+        android:layout_margin="36dp">
+
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:id="@+id/ivPlaceHolder"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_upload"
+            app:tint="@color/yellow"
+            android:scaleType="centerCrop"/>
+
+        <ProgressBar
+            android:id="@+id/pbImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminateTint="@color/yellow"/>
+
+    </com.google.android.material.card.MaterialCardView>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabImage"
         android:layout_width="wrap_content"
