--- a/app/src/main/res/layout/activity_upload_xml.xml
+++ b/app/src/main/res/layout/activity_upload_xml.xml
@@ -42,6 +42,22 @@
             android:indeterminateTint="@color/yellow"/>
 
     </com.google.android.material.card.MaterialCardView>
+    
+    <EditText
+        android:id="@+id/etTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="36dp"
+        android:padding="8dp"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:imeOptions="actionDone"
+        android:background="@drawable/bg_rounded_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/cvImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fabImage"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabImage"
